Closed Bug 640321 Opened 14 years ago Closed 14 years ago

Images in contenteditable can not be resized if stopPropagation is called within mouseup

Categories

(Core :: DOM: Editor, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: JoWie, Assigned: ehsan.akhgari)

References

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b12) Gecko/20100101 Firefox/4.0b12 Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b12) Gecko/20100101 Firefox/4.0b12 If an image in an element with contenteditable="true" is resized and event.stopPropagation is called, the resizing will not stop after the mouse button has been released. With preventDefault this could be understandable, but this should not happen with stopPropagation Reproducible: Always Steps to Reproduce: 1. Open the testcase 2. Click on the first image 3. Drag one of the resize square's 4. Let go of the mouse Actual Results: The image will keep resizing towards the mouse cursor even though the mouse button has been released. Expected Results: (see second image) The resizing should stop after releasing the mouse button
Attached file Test case
Sounds like that listener needs to be in the system event group...
Attached patch Patch (v1)Splinter Review
As a bonus, this patch includes a test which tests all of the resizer handles in all of the directions with aspect ratio preserving turned on and off.
Assignee: nobody → ehsan
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #519521 - Flags: review?(roc)
Depends on: 641969
Depends on: post2.0
Whiteboard: [post-2.0]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
No longer depends on: post2.0
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [post-2.0]
Target Milestone: --- → mozilla2.2
Can you please document your additions to the SpecialPowers API here: https://developer.mozilla.org/en/SpecialPowers
Documentation complete.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: