Bug 640321 - Register the mouse event handlers for the editor in the system group; r=roc